<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cinema</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_update">Update info</string>
    <string name="movies">Movies</string>
    <string name="reservations">Reservations</string>
    <string name="internet_not_available">Internet connection not available</string>
    <string name="update_failed">Update failed</string>
    <string name="update_failed_movies">Movies update failed</string>
    <string name="update_failed_reservations">Reservations update failed</string>
    <string name="update_failed_sessions">Sessions update failed</string>
    <string name="title_activity_movie_info">MovieInfo</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="title_activity_reservation_info">Reservation</string>
    <string name="user_not_found">User not found</string>
    <string name="failed_register">Register failed</string>
    <string name="title_activity_new_reservation">Reservation</string>
    <string name="new_reservation">New reservation</string>
    <string name="invalid_date">Invalid date</string>
    <string name="no_seats">No seats available</string>
    <string name="row_front">Front</string>
    <string name="row_back">Back</string>
    <string name="column_left">Left</string>
    <string name="column_center">Center</string>
    <string name="column_right">Right</string>
    <string name="get_seats_1">Get</string>
    <string name="get_seats_2">seat(s)</string>
    <string name="finish_reservation">Get reservation</string>
    <string name="error_finish_reservation">Could not finish reservation</string>
    <string name="movie_sessions_title">Available sessions</string>
    <string name="movie_sinopsis_title">Sinopsis</string>
    <string name="new_reservation_date_title">Choose date</string>
    <string name="new_reservation_places_title">Choose place</string>
    <string name="specify_seats_block_title">How many seats?</string>
    <string name="finish_reservation_block_title">Seats given</string>
    <string name="reservation_info_title">Reservation</string>
    <string name="reservation_places_title">Reserved seats</string>
    <string name="reservation_button_delete">Remove reservation</string>
    <string name="error_delete_reservation">Error removing reservation</string>
    <string name="title_activity_teste">Teste</string>
    <string name="show_seats_map_button">Locate seats</string>

</resources>
