<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.feup.cmov.cinema.ui.NewReservation" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_reservation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/new_reservation_movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/new_reservation_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <EditText
        android:id="@+id/new_reservation_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date|textAutoCorrect" >

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/places_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <GridLayout
        android:id="@+id/places_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <Button
            android:id="@+id/place_front_left"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/column_left" />

        <Button
            android:id="@+id/place_front_center"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:text="@string/column_center" />

        <Button
            android:id="@+id/place_front_right"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="1"
            android:text="@string/column_right" />

        <Button
            android:id="@+id/place_back_left"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/column_left" />

        <Button
            android:id="@+id/place_back_center"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="3"
            android:text="@string/column_center" />

        <Button
            android:id="@+id/place_back_right"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="3"
            android:text="@string/column_right" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/row_front" />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:text="@string/row_back" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/specify_seats_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/n_places_chooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false" />

        <TextView
            android:id="@+id/specify_n_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/get_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_seats" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/finish_reservation_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/seats_given"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/finish_reservation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_reservation" />
    </LinearLayout>

</LinearLayout>