<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.feup.cmov.cinema.ui.NewReservation" >

    <TextView
        android:id="@+id/reservation_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/reservation_info_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_row_selector"
        android:padding="@dimen/activity_horizontal_margin" >

        <ImageView
            android:id="@+id/movie_cover"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/movie_cover"
            android:layout_toRightOf="@+id/movie_cover"
            android:text="Name"
            android:textSize="@dimen/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reservation_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_name"
            android:layout_marginTop="2dip"
            android:layout_toRightOf="@+id/movie_cover"
            android:text="Dates"
            android:textSize="@dimen/title" />

        <TextView
            android:id="@+id/reservation_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reservation_date"
            android:layout_marginTop="1dip"
            android:layout_toRightOf="@+id/movie_cover"
            android:text="session time"
            android:textSize="@dimen/rating" />

        <TextView
            android:id="@+id/reservation_room"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reservation_time"
            android:layout_marginTop="1dip"
            android:layout_toRightOf="@+id/movie_cover"
            android:text="session room"
            android:textSize="@dimen/rating" />

        <Button
            android:id="@+id/reservation_button_delete"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reservation_room"
            android:layout_toRightOf="@+id/movie_cover"
            android:text="@string/reservation_button_delete" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/list_row_selector"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/reservation_places__title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_places_title"
            android:textSize="@dimen/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reservation_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sinopsis" />

        <Button
            android:id="@+id/show_seats_map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_seats_map_button" />
    </LinearLayout>

</LinearLayout>